Update links in index.html to point to #blog

--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
                         <h3 class="font-semibold text-xl text-white mb-5">Kategori Tulisan</h3>
                         <ul >
                             <li>
-                                <a href="#" class="inline-block text-base hover:text-primary mb-3">Programming</a>
+                                <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Programming</a>
                             </li>
                             <li>
-                                <a href="#" class="inline-block text-base hover:text-primary mb-3">Keyboard</a>
+                                <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Keyboard</a>
                             </li>
                             <li>
-                                <a href="#" class="inline-block text-base hover:text-primary mb-3">Error</a>
+                                <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Error</a>
                             </li>
                         </ul>
                     </div>
