--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                 <a href="#portfolio" class="inline-block text-base hover:text-primary mb-3">Portfolio</a>
                             </li>
                             <li>
-                                <a href="#"Clients class="inline-block text-base hover:text-primary mb-3">Clients</a>
+                                <a href="#clients"class="inline-block text-base hover:text-primary mb-3">Clients</a>
                             </li>
                             <li>
                                 <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Blog</a>
