--- a/index.html
+++ b/index.html
@@ -82,18 +82,31 @@
                 <div class="w-full self-center px-4 lg:w-1/2">
                     <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Halo semuanya👋,saya 
                         <span class="block font-bold text-slate-900 text-dark text-4xl mt-1 lg:text-5xl dark:text-white">Jaya Cahya </span></h1>
-                    <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Software <span class="text-dark dark:text-white">Engineering</span></h2>
+                    <!-- <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">I 'am Software <span class="text-dark dark:text-white">Engineering</span></h2> -->
+                     <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">
+                        I'am Software 
+                        <span id="typing-text" class="text-dark dark:text-white"></span>
+                    </h2>
+
                     <p class="font-medium text-slate-400 mb-10 leading-relaxed"> Kesuksesan bukan hanya untuk orang pintar 
                         tetapi Kesuksesan adalah orang yang selalu <span class="text-dark font-bold dark:text-white">berusaha</span></p>
+                    <div class="flex flex-wrap items-center gap-1">
+                        <a href="#contact" 
+                        class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full 
+                                hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">
+                            Hubungi Saya
+                        </a>
 
-                    <a href="#contact" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full 
-                        hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out ">
-                        Hubungi Saya
-                    </a>
+                        <a href="dist/cv/tugas cv.pdf" download class="text-base font-semibold text-primary border border-primary py-3 px-8 rounded-full 
+                                hover:bg-primary hover:text-white hover:shadow-lg transition duration-300 ease-in-out">
+                            Download CV
+                        </a>
+                    </div>
+
                 </div>
                  <div class="w-full lg:w-1/2 flex justify-center">
                     <div class="relative mt-10 lg:mt-9 lg:right-0">
-                        <img src="dist/img/f.png" alt="Jaya" class="relative z-10 max-w-full mx-auto">
+                        <img src="dist/img/f.png" alt="Jaya" class="relative z-10 max-w-full mx-auto animate-float">
                         <span class="absolute bottom-20 left-1/2 -translate-x-1/2 md:scale-125">
                             <!-- <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                                 <path fill="#14b8a6" d="M61.1,-54.5C70.4,-37.2,62.8,-12.3,55.9,10.6C48.9,33.6,42.6,54.5,29.7,60.2C16.7,65.9,
@@ -129,12 +142,12 @@
                     </p>
                     <div class="flex items-center">
                         <!-- instagram -->
-                         <a href="https:instagram.com/jaya_c.n" target="_blank" class="mr-4 flex items-center text-slate-300 hover:text-primary">
+                         <a href="https://instagram.com/jaya_c.n" target="_blank" class="mr-4 flex items-center text-slate-300 hover:text-primary">
                             <svg role="img" width="30" class="fill-current"viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Instagram</title><path d="M7.0301.084c-1.2768.0602-2.1487.264-2.911.5634-.7888.3075-1.4575.72-2.1228 1.3877-.6652.6677-1.075 1.3368-1.3802 2.127-.2954.7638-.4956 1.6365-.552 2.914-.0564 1.2775-.0689 1.6882-.0626 4.947.0062 3.2586.0206 3.6671.0825 4.9473.061 1.2765.264 2.1482.5635 2.9107.308.7889.72 1.4573 1.388 2.1228.6679.6655 1.3365 1.0743 2.1285 1.38.7632.295 1.6361.4961 2.9134.552 1.2773.056 1.6884.069 4.9462.0627 3.2578-.0062 3.668-.0207 4.9478-.0814 1.28-.0607 2.147-.2652 2.9098-.5633.7889-.3086 1.4578-.72 2.1228-1.3881.665-.6682 1.0745-1.3378 1.3795-2.1284.2957-.7632.4966-1.636.552-2.9124.056-1.2809.0692-1.6898.063-4.948-.0063-3.2583-.021-3.6668-.0817-4.9465-.0607-1.2797-.264-2.1487-.5633-2.9117-.3084-.7889-.72-1.4568-1.3876-2.1228C21.2982 1.33 20.628.9208 19.8378.6165 19.074.321 18.2017.1197 16.9244.0645 15.6471.0093 15.236-.005 11.977.0014 8.718.0076 8.31.0215 7.0301.0839m.1402 21.6932c-1.17-.0509-1.8053-.2453-2.2287-.408-.5606-.216-.96-.4771-1.3819-.895-.422-.4178-.6811-.8186-.9-1.378-.1644-.4234-.3624-1.058-.4171-2.228-.0595-1.2645-.072-1.6442-.079-4.848-.007-3.2037.0053-3.583.0607-4.848.05-1.169.2456-1.805.408-2.2282.216-.5613.4762-.96.895-1.3816.4188-.4217.8184-.6814 1.3783-.9003.423-.1651 1.0575-.3614 2.227-.4171 1.2655-.06 1.6447-.072 4.848-.079 3.2033-.007 3.5835.005 4.8495.0608 1.169.0508 1.8053.2445 2.228.408.5608.216.96.4754 1.3816.895.4217.4194.6816.8176.9005 1.3787.1653.4217.3617 1.056.4169 2.2263.0602 1.2655.0739 1.645.0796 4.848.0058 3.203-.0055 3.5834-.061 4.848-.051 1.17-.245 1.8055-.408 2.2294-.216.5604-.4763.96-.8954 1.3814-.419.4215-.8181.6811-1.3783.9-.4224.1649-1.0577.3617-2.2262.4174-1.2656.0595-1.6448.072-4.8493.079-3.2045.007-3.5825-.006-4.848-.0608M16.953 5.5864A1.44 1.44 0 1 0 18.39 4.144a1.44 1.44 0 0 0-1.437 1.4424M5.8385 12.012c.0067 3.4032 2.7706 6.1557 6.173 6.1493 3.4026-.0065 6.157-2.7701 6.1506-6.1733-.0065-3.4032-2.771-6.1565-6.174-6.1498-3.403.0067-6.156 2.771-6.1496 6.1738M8 12.0077a4 4 0 1 1 4.008 3.9921A3.9996 3.9996 0 0 1 8 12.0077"/></svg>
                          </a>
 
                         <!-- whatsapp -->
-                         <a href="https:whatsapp.com/081288182325" target="_blank" class="mr-4 flex items-center text-slate-300 hover:text-primary">
+                         <a href="https://whatsapp.com/081288182325" target="_blank" class="mr-4 flex items-center text-slate-300 hover:text-primary">
                             <svg role="img" width="30" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>WhatsApp</title><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
                          </a>
 
@@ -321,13 +334,13 @@
                         <h3 class="font-semibold text-xl text-white mb-5">Kategori Tulisan</h3>
                         <ul >
                             <li>
-                                <a href="#" class="inline-block text-base hover:text-primary mb-3">Programming</a>
+                                <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Programming</a>
                             </li>
                             <li>
-                                <a href="#" class="inline-block text-base hover:text-primary mb-3">Keyboard</a>
+                                <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Keyboard</a>
                             </li>
                             <li>
-                                <a href="#" class="inline-block text-base hover:text-primary mb-3">Error</a>
+                                <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Error</a>
                             </li>
                         </ul>
                     </div>
@@ -344,7 +357,7 @@
                                 <a href="#portfolio" class="inline-block text-base hover:text-primary mb-3">Portfolio</a>
                             </li>
                             <li>
-                                <a href="#"Clients class="inline-block text-base hover:text-primary mb-3">Clients</a>
+                                <a href="#clients"Clients class="inline-block text-base hover:text-primary mb-3">Clients</a>
                             </li>
                             <li>
                                 <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Blog</a>
@@ -358,12 +371,12 @@
                 <div class="w-full pt-10 border-t border-slate-700">
                     <div class="flex items-center justify-center mb-5">
                         <!-- instagram -->
-                         <a href="https:instagram.com/jaya_c.n" target="_blank" class="mr-4 flex items-center text-slate-300 hover:text-primary">
+                         <a href="https://instagram.com/jaya_c.n" target="_blank" class="mr-4 flex items-center text-slate-300 hover:text-primary">
                             <svg role="img" width="30" class="fill-current"viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Instagram</title><path d="M7.0301.084c-1.2768.0602-2.1487.264-2.911.5634-.7888.3075-1.4575.72-2.1228 1.3877-.6652.6677-1.075 1.3368-1.3802 2.127-.2954.7638-.4956 1.6365-.552 2.914-.0564 1.2775-.0689 1.6882-.0626 4.947.0062 3.2586.0206 3.6671.0825 4.9473.061 1.2765.264 2.1482.5635 2.9107.308.7889.72 1.4573 1.388 2.1228.6679.6655 1.3365 1.0743 2.1285 1.38.7632.295 1.6361.4961 2.9134.552 1.2773.056 1.6884.069 4.9462.0627 3.2578-.0062 3.668-.0207 4.9478-.0814 1.28-.0607 2.147-.2652 2.9098-.5633.7889-.3086 1.4578-.72 2.1228-1.3881.665-.6682 1.0745-1.3378 1.3795-2.1284.2957-.7632.4966-1.636.552-2.9124.056-1.2809.0692-1.6898.063-4.948-.0063-3.2583-.021-3.6668-.0817-4.9465-.0607-1.2797-.264-2.1487-.5633-2.9117-.3084-.7889-.72-1.4568-1.3876-2.1228C21.2982 1.33 20.628.9208 19.8378.6165 19.074.321 18.2017.1197 16.9244.0645 15.6471.0093 15.236-.005 11.977.0014 8.718.0076 8.31.0215 7.0301.0839m.1402 21.6932c-1.17-.0509-1.8053-.2453-2.2287-.408-.5606-.216-.96-.4771-1.3819-.895-.422-.4178-.6811-.8186-.9-1.378-.1644-.4234-.3624-1.058-.4171-2.228-.0595-1.2645-.072-1.6442-.079-4.848-.007-3.2037.0053-3.583.0607-4.848.05-1.169.2456-1.805.408-2.2282.216-.5613.4762-.96.895-1.3816.4188-.4217.8184-.6814 1.3783-.9003.423-.1651 1.0575-.3614 2.227-.4171 1.2655-.06 1.6447-.072 4.848-.079 3.2033-.007 3.5835.005 4.8495.0608 1.169.0508 1.8053.2445 2.228.408.5608.216.96.4754 1.3816.895.4217.4194.6816.8176.9005 1.3787.1653.4217.3617 1.056.4169 2.2263.0602 1.2655.0739 1.645.0796 4.848.0058 3.203-.0055 3.5834-.061 4.848-.051 1.17-.245 1.8055-.408 2.2294-.216.5604-.4763.96-.8954 1.3814-.419.4215-.8181.6811-1.3783.9-.4224.1649-1.0577.3617-2.2262.4174-1.2656.0595-1.6448.072-4.8493.079-3.2045.007-3.5825-.006-4.848-.0608M16.953 5.5864A1.44 1.44 0 1 0 18.39 4.144a1.44 1.44 0 0 0-1.437 1.4424M5.8385 12.012c.0067 3.4032 2.7706 6.1557 6.173 6.1493 3.4026-.0065 6.157-2.7701 6.1506-6.1733-.0065-3.4032-2.771-6.1565-6.174-6.1498-3.403.0067-6.156 2.771-6.1496 6.1738M8 12.0077a4 4 0 1 1 4.008 3.9921A3.9996 3.9996 0 0 1 8 12.0077"/></svg>
                          </a>
 
                         <!-- whatsapp -->
-                         <a href="https:whatsapp.com/081288182325" target="_blank" class="mr-4 flex items-center text-slate-300 hover:text-primary">
+                         <a href="https://whatsapp.com/081288182325" target="_blank" class="mr-4 flex items-center text-slate-300 hover:text-primary">
                             <svg role="img" width="30" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>WhatsApp</title><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
                          </a>
 
@@ -384,5 +397,47 @@
                 </a>
             <!-- back to top end -->
       <script src="dist/js/script.js"></script>
+
+      <!-- script text berjalan -->
+       <script>
+  const texts = [
+    "Engineering",
+    "Developer",
+    "Web Programmer",
+    "UI Designer"
+  ];
+
+  let index = 0;
+  let charIndex = 0;
+  const speed = 100;
+  const eraseSpeed = 50;
+  const delay = 1500;
+
+  const typingText = document.getElementById("typing-text");
+
+  function type() {
+    if (charIndex < texts[index].length) {
+      typingText.textContent += texts[index].charAt(charIndex);
+      charIndex++;
+      setTimeout(type, speed);
+    } else {
+      setTimeout(erase, delay);
+    }
+  }
+
+  function erase() {
+    if (charIndex > 0) {
+      typingText.textContent = texts[index].substring(0, charIndex - 1);
+      charIndex--;
+      setTimeout(erase, eraseSpeed);
+    } else {
+      index = (index + 1) % texts.length;
+      setTimeout(type, speed);
+    }
+  }
+
+  document.addEventListener("DOMContentLoaded", type);
+</script>
+
 </body>
 </html>
