--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
 
                     <p class="font-medium text-slate-400 mb-10 leading-relaxed"> Kesuksesan bukan hanya untuk orang pintar 
                         tetapi Kesuksesan adalah orang yang selalu <span class="text-dark font-bold dark:text-white">berusaha</span></p>
-                    <div class="flex flex-wrap items-center gap-1">
+                    <div class="flex w-full items-center justify-between sm:justify-start sm:gap-4">
                         <a href="#contact" 
-                        class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full 
-                                hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">
+                           class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full 
+                                  hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">
                             Hubungi Saya
                         </a>
-
-                        <a href="dist/cv/tugas cv.pdf" download class="text-base font-semibold text-primary border border-primary py-3 px-8 rounded-full 
-                                hover:bg-primary hover:text-white hover:shadow-lg transition duration-300 ease-in-out">
+                    
+                        <a href="dist/cv/tugas cv.pdf" download
+                           class="text-base font-semibold text-primary border border-primary py-3 px-8 rounded-full 
+                                  hover:bg-primary hover:text-white hover:shadow-lg transition duration-300 ease-in-out">
                             Download CV
                         </a>
                     </div>
-
                 </div>
                  <div class="w-full lg:w-1/2 flex justify-center">
                     <div class="relative mt-10 lg:mt-9 lg:right-0">
