--- a/index.html
+++ b/index.html
@@ -292,15 +292,15 @@
                         <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, nostrum!</p>
                     </div>
                 </div>
-                    <form action="">
+                    <form id="contact-form">
                     <div class="w-full lg:w-2/3 lg:mx-auto">
                         <div class="w-full px-4 mb-8">
-                            <label for="name" class="text-base font-bold text-primary">Nama</label>
-                            <input type="text" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+                            <label for="from_name" class="text-base font-bold text-primary">Nama</label>
+                            <input type="text" id="from_name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
                         </div>
                         <div class="w-full px-4 mb-8">
-                            <label for="email" class="text-base font-bold text-primary">Email</label>
-                            <input type="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+                            <label for="from_email" class="text-base font-bold text-primary">Email</label>
+                            <input type="email" id="from_email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
                         </div>
                         <div class="w-full px-4 mb-8">
                             <label for="message" class="text-base font-bold text-primary">Pesan</label>
