--- a/index.html
+++ b/index.html
@@ -296,15 +296,15 @@
                     <div class="w-full lg:w-2/3 lg:mx-auto">
                         <div class="w-full px-4 mb-8">
                             <label for="from_name" class="text-base font-bold text-primary">Nama</label>
-                            <input type="text" id="from_name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+                            <input type="text" name="from_name" id="from_name"  class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary required">
                         </div>
                         <div class="w-full px-4 mb-8">
                             <label for="from_email" class="text-base font-bold text-primary">Email</label>
-                            <input type="email" id="from_email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+                            <input type="email" name="from_email" id="from_email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary required">
                         </div>
                         <div class="w-full px-4 mb-8">
                             <label for="message" class="text-base font-bold text-primary">Pesan</label>
-                            <textarea type="message" id="message" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary h-32"></textarea>
+                            <textarea type="message" name="message" id="message" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary h-32 required"></textarea>
                         </div>
                         <div class="w-full px-4">
                             <button class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full w-full hover:opacity-80 hover:shadow-lg transition duration-500">
