--- a/index.html
+++ b/index.html
@@ -177,8 +177,14 @@
                             <img src="dist/img/portfolio/pb.png" alt="Landing page" width="w-full">
                         </div>
                         <div class="mt-4"></div>
-                        <h3 class="font-semibold text-xl text-dark dark:text-white">Landing page jaya cahya</h3>
+                        <h3 class="font-semibold text-xl text-dark dark:text-white">Projek Services & Custom</h3>
                         <p class="font-medium text-base text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum aperiam ullam magni modi. Tempora commodi maiores facere nihil, hic ducimus ea quam, mollitia qui deleniti vel distinctio officiis ex fugiat?</p>
+                        <div class="mt-2"></div>
+                        <a href="https://jayacahya.github.io/gaklagikentang/"
+                            target="_blank"
+                            class="inline-block px-6 py-2 text-sm font-semibold text-white bg-primary rounded-full hover:opacity-80 transition">
+                            Lihat Website
+                        </a>
                     </div>
                     <div class="mb-12 ">
                         <div class="rounded-md shadow-md overflow-hidden">
@@ -187,6 +193,12 @@
                         <div class="mt-4"></div>
                         <h3 class="font-semibold text-xl text-dark dark:text-white">Project Uji Kompetensi</h3>
                         <p class="font-medium text-base text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum aperiam ullam magni modi. Tempora commodi maiores facere nihil, hic ducimus ea quam, mollitia qui deleniti vel distinctio officiis ex fugiat?</p>
+                        <div class="mt-2"></div>
+                        <a href="#"
+                            target="_blank"
+                            class="inline-block px-6 py-2 text-sm font-semibold text-white bg-primary rounded-full hover:opacity-80 transition">
+                            Lihat Website (Belum dihosting)
+                        </a>
                     </div>
                     <div class="mb-12 ">
                         <div class="rounded-md shadow-md overflow-hidden">
@@ -195,6 +207,12 @@
                         <div class="mt-4"></div>
                         <h3 class="font-semibold text-xl text-dark dark:text-white">Project PKK</h3>
                         <p class="font-medium text-base text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum aperiam ullam magni modi. Tempora commodi maiores facere nihil, hic ducimus ea quam, mollitia qui deleniti vel distinctio officiis ex fugiat?</p>
+                        <div class="mt-2"></div>
+                        <a href="#"
+                            target="_blank"
+                            class="inline-block px-6 py-2 text-sm font-semibold text-white bg-primary rounded-full hover:opacity-80 transition">
+                            Lihat Website (Belum dihosting)
+                        </a>
                     </div>
                     <div class="mb-12 ">
                         <div class="rounded-md shadow-md overflow-hidden">
@@ -203,6 +221,12 @@
                         <div class="mt-4"></div>
                         <h3 class="font-semibold text-xl text-dark dark:text-white">Latihan Laravel</h3>
                         <p class="font-medium text-base text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum aperiam ullam magni modi. Tempora commodi maiores facere nihil, hic ducimus ea quam, mollitia qui deleniti vel distinctio officiis ex fugiat?</p>
+                        <div class="mt-2"></div>
+                        <a href="#"
+                            target="_blank"
+                            class="inline-block px-6 py-2 text-sm font-semibold text-white bg-primary rounded-full hover:opacity-80 transition">
+                            Lihat Website (Belum dihosting)
+                        </a>
                     </div>
                 </div>
             </div>
