--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="w-full px-4 grid grid-cols-1 md:grid-cols-2 gap-8 xl:w-10/12 xl:mx-auto">
                     <div class="mb-12 ">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/img/portfolio/pb.png" alt="Landing page" width="w-full">
+                            <img src="glk.png" alt="Landing page" width="w-full">
                         </div>
                         <div class="mt-4"></div>
                         <h3 class="font-semibold text-xl text-dark dark:text-white">Projek Services & Custom</h3>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="mb-12 ">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/img/portfolio/p1.png" alt="latihan laravel" width="w-full">
+                            <img src="ujikom.png" alt="latihan laravel" width="w-full">
                         </div>
                         <div class="mt-4"></div>
                         <h3 class="font-semibold text-xl text-dark dark:text-white">Project Uji Kompetensi</h3>
