--- a/index.html
+++ b/index.html
@@ -174,6 +174,34 @@
                 <div class="w-full px-4 grid grid-cols-1 md:grid-cols-2 gap-8 xl:w-10/12 xl:mx-auto">
                     <div class="mb-12 ">
                         <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/portfolio/myadventure.png" alt="Landing page" width="w-full">
+                        </div>
+                        <div class="mt-4"></div>
+                        <h3 class="font-semibold text-xl text-dark dark:text-white">My Adventure</h3>
+                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil maiores quam unde deserunt. Voluptatibus laboriosam unde minima porro cupiditate eum.</p>
+                        <div class="mt-2"></div>
+                        <a href="https://jayacahya.github.io/My-Adventure/"
+                            target="_blank"
+                            class="inline-block px-6 py-2 text-sm font-semibold text-white bg-primary rounded-full hover:opacity-80 transition">
+                            Lihat Website
+                        </a>
+                    </div>
+                    <div class="mb-12 ">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/portfolio/flower.png" alt="Landing page" width="w-full">
+                        </div>
+                        <div class="mt-4"></div>
+                        <h3 class="font-semibold text-xl text-dark dark:text-white">Fresh Flower Ultah</h3>
+                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci necessitatibus ullam culpa molestiae.</p>
+                        <div class="mt-2"></div>
+                        <a href=" https://jayacahya.github.io/ultah/"
+                            target="_blank"
+                            class="inline-block px-6 py-2 text-sm font-semibold text-white bg-primary rounded-full hover:opacity-80 transition">
+                            Lihat Website
+                        </a>
+                    </div>
+                    <div class="mb-12 ">
+                        <div class="rounded-md shadow-md overflow-hidden">
                             <img src="glk.png" alt="Landing page" width="w-full">
                         </div>
                         <div class="mt-4"></div>
